# logprox

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  PERFORMANCE_ANALYSIS_PLAN.md  PERFORMANCE_IMPLEMENTATION_GUIDE.md  PERFORMANCE_OPTIMIZATION_PLAN.md  PERFORMANCE_SUMMARY.md  README.md  TESTING.md  config.yaml  config_docs.md  debug_proxy.py
benches/: comprehensive_performance.rs  performance_microbenchmarks.rs  proxy_latency.rs
scripts/: validate_performance.sh
src/: config.rs  handlers.rs  lib.rs  main.rs
src/config/: mod.rs  request.rs  response.rs
src/handlers/: api.rs  mod.rs  optimized_proxy.rs.disabled  proxy.rs
src/performance.disabled/: benchmark.rs  cache.rs  lockfree.rs  mod.rs  pool.rs  tests.rs  zero_copy.rs
tests/: config_tests.rs  integration_tests.rs  performance_regression_tests.rs  proxy_unit_tests.rs  test_config.yaml
