[package]
name = "logprox"
version = "0.3.0"
edition = "2021"
rust-version = "1.80"
authors = ["Bryan Lott <bryan@bryanlott.dev>"]
description = "A blazing-fast HTTP proxy with conditional logging and request control"
license = "GPL-3.0"
homepage = "https://github.com/bryan-lott/logprox"
repository = "https://github.com/bryan-lott/logprox"
documentation = "https://docs.rs/logprox"
readme = "README.md"
keywords = ["proxy", "http", "logging", "monitoring", "api-gateway"]
categories = ["web-programming::http-server", "network-programming"]
exclude = ["config.yaml", ".github/", "benches/", "tests/"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lib]
name = "logprox"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
axum = { version = "0.7", features = ["macros"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }
parking_lot = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_norway = "0.9"
regex = "1.5"
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tower = "0.5"
tempfile = "3.17"

[[bench]]
name = "proxy_latency"
harness = false

[[bench]]
name = "performance_microbenchmarks"
harness = false

[[bench]]
name = "comprehensive_performance"
harness = false
